unpackaged/main/default/objects/LS_VC__Visual_Calendar_QuickLink__c/LS_VC__Visual_Calendar_QuickLink__c.object-meta.xml
<CustomObject>
    <description>Stores reporting link menu item information for the screen.</description>
    <label>Visual Calendar QuickLink</label>
    <nameField>
        <label>QuickLink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visual Calendar QuickLinks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>