unpackaged/main/default/objects/LS_VC__Visual_Calendar_QuickLink__c/fields/LS_VC__Category__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quick Link</fullName>
                <default>true</default>
                <label>Quick Link</label>
            </value>
            <value>
                <fullName>Calendar Link</fullName>
            </value>
            <value>
                <fullName>Metrics Link</fullName>
            </value>
            <value>
                <fullName>Ticker Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>