unpackaged/main/default/objects/LS_VC__Visual_Calendar_QuickLink__c/fields/LS_VC__Children__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Children__c</fullName>
    <description>Internal field</description>
    <label>Children</label>
    <length>4</length>
    <type>Text</type>
</CustomField>