unpackaged/main/default/objects/LS_VC__Visual_Calendar_QuickLink__c/fields/LS_VC__Enable_Link__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Enable_Link__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this field if you want to enable the link field on the menu item.</inlineHelpText>
    <label>Enable Link</label>
    <type>Checkbox</type>
</CustomField>