unpackaged/main/default/objects/LS_VC__Visual_Calendar_QuickLink__c/fields/LS_VC__Homepage__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Homepage__c</fullName>
    <label>Homepage</label>
    <referenceTo>LS_VC__Visual_Calendar_HomePage__c</referenceTo>
    <relationshipName>Petcare_QuickLinks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>