unpackaged/main/default/objects/LS_VC__Visual_Calendar_QuickLink__c/fields/LS_VC__Item_Order__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Item_Order__c</fullName>
    <label>Item Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>