unpackaged/main/default/objects/LS_VC__Visual_Calendar_QuickLink__c/fields/LS_VC__Level__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Level__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The level in the menu tree. Starting in 0.</description>
    <inlineHelpText>The level in the menu tree. Starting in 0.</inlineHelpText>
    <label>Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>