unpackaged/main/default/objects/LS_VC__Visual_Calendar_QuickLink__c/fields/LS_VC__Quick_Link__c.field-meta.xml
<CustomField>
    <fullName>LS_VC__Quick_Link__c</fullName>
    <label>Quick Link</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>